# marketmatchingcli

./: .env.example  .gitignore  Dockerfile  alembic.ini  allqslinks.txt  docker-compose.yml  fetch_all_events.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_vector_dim_384.py  003_add_link_column.py  004_edge_type_in_market_edges_pk.py  005_add_projection_tables.py  006_add_market_clusters_table.py  007_add_market_projection_distortion_table.py  008_switch_embeddings_to_potion_base_2m.py  009_switch_embeddings_to_bge_large_en_v1_5.py  010_add_projection_manifold_cache_table.py  011_add_event_tags_tables.py  012_add_neighborhood_columns.py  013_add_neighborhoods_table.py  014_add_event_embedding_and_projection_tables.py  015_add_closest_n_nodes_to_event_projection.py
frontend/: DiscoveryMap3D.tsx  README.md  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  styles.css
marketmap/: cli.py  config.py
marketmap/api/: main.py  schemas.py
marketmap/clients/: polymarket.py
marketmap/clustering/: local_clusters.py
marketmap/events/: __init__.py  pipeline.py
marketmap/ingest/: __init__.py  polymarket_event_tags.py
marketmap/models/: database.py  tables.py
marketmap/neighborhoods/: __init__.py  assign.py
marketmap/projection/: __init__.py  (+1 more)
scripts/: evaluate_projection_quality.py  init_extensions.sql  load_allqslinks.py  sweep_projection_configs.py  validate_discovery_edges.py
tests/: test_api_schema_backward_compat.py  test_neighborhood_assignment.py  test_projection_version_stability.py
(+26 files in other folders)
